--- a/src/Minter.css
+++ b/src/Minter.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  background-attachment: fixed;
+  height: 2196px;
   background-image: url("./assets/WALLPAPER.png");
   background-position: 50% 100%;
   background-size: 100% 100%;
